Making Wondis happy makes me sad :(

--- a/Report/3TI.tex
+++ b/Report/3TI.tex
@@ -24,13 +24,13 @@ which are then integrated to give
 \begin{equation}
   x = cp + C_1, \qquad t = p + C_2, \qquad u = C_3
 \end{equation}
-By setting $p=0$ at $t=0$, $C_2$ is set to 0 and $t=p$ everywhere. Setting $x=p$ along $u_0(x)$ gives us 
+By setting $p=0$ at $t=0$, $C_2$ is set to 0 and $t=p$ everywhere. Setting $x=p$ along $u_0(x)$ gives us
 \begin{equation}
 x=cp+q \qquad \text{and} \qquad u=u_0(q).
 \end{equation}
 \linebreak
 \linebreak
-$x=cp+q$ and $t=p$ can be used to give us the characteristic coordinate 
+$x=cp+q$ and $t=p$ can be used to give us the characteristic coordinate
 \begin{equation}
 q=x-ct
 \end{equation}
@@ -41,11 +41,11 @@ which is a line with a slope of $c$ in the $(x,t)-plane$. Substituting this into
 %--------------------------------------------------------------------
 \subsection{Wave Equation}
 The Wave Equation is a second order PDE, therefore it has two characteristics. $p$ and
-$q$.By reducing the equation to its canonical form, $u_{pq} = 0$. In this we see that 
+$q$.By reducing the equation to its canonical form, $u_{pq} = 0$. In this we see that
 \begin{equation} \label{wavecoords}
 p = x-ct \qquad \text{and} \qquad q = x + ct
 \end{equation}
-Since $u_{pq} = u_{qp} = 0$ then it follows that $u_p = P(p)$. Let $F(p)$ be an anti-derivative of $P$ therefore $\frac{dF}{dp}(p) = P(p)$ and therefore 
+Since $u_{pq} = u_{qp} = 0$ then it follows that $u_p = P(p)$. Let $F(p)$ be an anti-derivative of $P$ therefore $\frac{dF}{dp}(p) = P(p)$ and therefore
 \begin{equation}
 \frac{\partial}{\partial p}(u - F(p)) = 0
 \end{equation}
@@ -65,7 +65,7 @@ Along with finding the characteristics comes the trouble of determining the spac
 \begin{figure}[H]
 \centering
 \begin{subfigure}[b]{0.3\textwidth}
-  \includegraphics[width=\textwidth]{Images/advection_h<k.jpg}
+  \includegraphics[width=\textwidth]{Images/advection_hlk.jpg}
   \caption{$h<k$}
   \label{fig:aci1}
 \end{subfigure}
@@ -77,7 +77,7 @@ Along with finding the characteristics comes the trouble of determining the spac
 \end{subfigure}
 \hfill
 \begin{subfigure}[b]{0.3\textwidth}
-  \includegraphics[width=\textwidth]{Images/advection_h>k.jpg}
+  \includegraphics[width=\textwidth]{Images/advection_hgk.jpg}
   \caption{$h>k$}
   \label{fig:aci3}
 \end{subfigure}
@@ -89,7 +89,7 @@ Along with finding the characteristics comes the trouble of determining the spac
 \centering
 \begin{subfigure}[b]{0.3\textwidth}
   \centering
-  \includegraphics[width=\textwidth]{Images/wave_h<k.jpg}
+  \includegraphics[width=\textwidth]{Images/wave_hlk.jpg}
   \caption{$h<k$}
   \label{fig:wci1}
 \end{subfigure}
@@ -101,7 +101,7 @@ Along with finding the characteristics comes the trouble of determining the spac
 \end{subfigure}
 \hfill
 \begin{subfigure}[b]{0.3\textwidth}
-  \includegraphics[width=\textwidth]{Images/wave_h>k.jpg}
+  \includegraphics[width=\textwidth]{Images/wave_hgk.jpg}
   \caption{$h>k$}
   \label{fig:wci3}
 \end{subfigure}
@@ -119,10 +119,10 @@ v_i^j = u(x_i,t_j)
 \end{equation}
 by using the standard FDM we get the partial derivatives
 \begin{equation}\label{advfdm}
-\begin{align}
+\begin{aligned}
     \partial_xv_i^j &= \frac{v_{i+1}^j - v_{i-1}^j}{2h} + O(h^2) \\
     \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^{j-1}}{2k} + O(k^2)
-\end{align}
+\end{aligned}
 \end{equation}
 %-----------------------------------------------------------------
 \subsubsection{Leapfrog}
@@ -132,51 +132,51 @@ Substituting Equation \ref{advfdm} into the advection equation we get
 \end{equation}
 however, $v_i^{j+1}$ is unknown. So we rearrange the equation to solve for $v_i^{j+1}$ to get
 \begin{equation}
-\begin{align}
+\begin{aligned}
     v_i^{j+1} &= v_i^{j-1} - 2ck\partial_xv_i^j \\
 	      &= v_i^{j-1} - c\frac{k}{h}(v_{i+1}^j - v_{i-1}^j) + O(h^2k^2)
-\end{align}
+\end{aligned}
 \end{equation}
 This is known as the ``Leapfrog'' method as it requires $v_i^{j-1}$ in order to calculate $v_i^{j+1}$ This can be somewhat problematic with the initial data as $v_i^0=u_0$ and $v_i^2$ onwards can be calculated this way but $v_i^1$ cannot be found by this method. Another problem concerining this method is the decoupling of odd and even points as all even points rely soley on the odd points of the previous time step and alternately for the odd points.
 %-----------------------------------------------------------------
 \subsubsection{Centered Euler}
 The Centred Euler method seeks to circumvent this problem by setting
 \begin{equation}
-\partial_tv_i^j = \frac{v_i^{j+1} - v_i^j}{k} + O(k) 
+\partial_tv_i^j = \frac{v_i^{j+1} - v_i^j}{k} + O(k)
 \end{equation}
 substituting this into the advection equation and rearranging to solve for $v_i^{j+1}$ gives
 \begin{equation}
-\begin{align}
+\begin{aligned}
     v_i^{j+1} &= v_i^j - ck\partial_xv_i^j \\
 	      &= v_i^j - c\frac{k}{2h}(v_{i+1}^j - v_{i-1}^j) + O(kh^2)
-\end{align}
+\end{aligned}
 \end{equation}
 This method uses a one-sided time step to calculate the next step. This makes it unconditionally unstable and over time it varies wildly from the actual data. Due to the error being relatively low for the first step, it is generally used to initialise the Leapfrog method.
 %-----------------------------------------------------------------
 \subsubsection{Upwind Euler}
 By setting
 \begin{equation}
-\begin{align}
+\begin{aligned}
     \partial_xv_i^j &= \frac{v_{i+1}^j - v_i^j}{h} + O(h) \\
     \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^j}{k} + O(k)
-\end{align}
+\end{aligned}
 \end{equation}
 we get
 \begin{equation}
-\begin{align}
+\begin{aligned}
     v_i^{j+1} &= v_i^j - ck\partial_xv_i^j \\
 	      &= v_i^j - c\frac{k}{h}(v_{i+1}^j - v_i^j) + O(kh)
-\end{align}
+\end{aligned}
 \end{equation}
 This is arguably the best method to calculate the advection equation as it uses a biased stencil to propel the data from $u_0$ along the $t$ and $x$ axis, much like the advection equation itself.
 %-----------------------------------------------------------------
 \subsection{Wave Equation}
 Using the second order, second derivative FDM on $u$ with $v_i^j = u(x_i,t_j)$ we get
 \begin{equation}
-\begin{align}
+\begin{aligned}
     \partial_{xx}v_i^j &= \frac{v_{i+1}^j - 2v_i^j + v_{i-1}^j}{h^2} + O(h^2) \\
     \partial_{tt}v_i^j &= \frac{v_i^{j+1} - 2v_i^j + v_i^{j-1}}{k^2} + O(k^2)
-\end{align}
+\end{aligned}
 \end{equation}
 Substituting this into the wave equation we get
 \begin{equation}
@@ -202,13 +202,13 @@ u(x,t) = e^{-(x-t)^2}
 \end{equation}
 The wild variance of the Centered Euler method can be seen after only two seconds in Figure \ref{center_euler_adv}. The L2-norm of the error exponentially increases over time as seen in Figure \ref{center_euler_adv_l2}. The method generates high frequency noise which is amplified over time and the previous step's noise feeds into the next step to be increased again. This is due to $k=h$ and how this step ratio sits exactly on the bounds what can be seen as a stable causal step. If $k<h$ the stability of the metod would increase greatly.
 %-------------------------------------------------------------------------------
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/center_euler_adv.jpg}
  \caption{Advection Equation and Approximations after 2 seconds}
  \label{center_euler_adv}
 \end{figure}
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/center_euler_adv_l2.jpg}
  \caption{Change in L2-norm over time of Centered Euler Evolution}
@@ -218,7 +218,7 @@ The wild variance of the Centered Euler method can be seen after only two second
 \subsection{Leapfrog Advection Equation}
 The L2-norm of the error as seen in Figure \ref{leapfrog_adv_l2} is due to the ghost points of the approximation being treated as a periodic extension of the function causing the function to be repeated every 20 time steps, the start of this can be seen in Figure \ref{leapfrog_adv}, which shows the functions after nine time steps. The error seems, in the early steps, to be much smaller than expected, $~10^{-15}$ instead of $~10^{-4}$ and $~10^{-8}$ for $N=100$ and $N=1000$ respectively. This is due to the ratio between the time, and spacial spacing being $k=h$, and that this perfectly projects the previous steps information to the next leading to a more precise approximation.
 %-------------------------------------------------------------------------------
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/leapfrog_adv_l2.jpg}
  \caption{Change in L2-norm over time of Leapfrog Evolution}
@@ -238,25 +238,25 @@ u(x,t) = \frac{1}{2}(e^{-(x-t)^2} + e^{-(x+t)^2})
 \end{equation}
 Figure \ref{leapfrog_wave} shows how this approximation suffers from the same problem as the leapfrog advection approximation since it too has ghost points which see the function as a periodic extension and leads to the same problem of steps in the L2-norm of the error, shown in Figure \ref{leapfrog_wave_l2}. Adjusting the size of the time steps by making $k=0.5h$ should leads to a minor reduction in the L2-norm of the error, however this is not the case as with $h=k$, the Leapfrog Wave Approximation has the same effect as that of the Leapfrog Advection Approximation where data is perefectly projected from one time step to the next leading it to be more accurate than that of a smaller time step as seen in Figure \ref{leapfrog_wave_l2_halfk}. With the large steps due to the periodic extension this is almost unnoticeable, if the time step is doubled to $k=2h$ then the error increases exponentially over time after a relatively short period of time, seen in Figure \ref{leapfrog_wave_l2_2k}.
 %-------------------------------------------------------------------------------
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/leapfrog_wave_l2.jpg}
  \caption{Change in L2-norm over time of Leapfrog Evolution with $k = h$}
  \label{leapfrog_wave_l2}
 \end{figure}
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/leapfrog_wave_l2_halfk.jpg}
  \caption{Change in L2-norm over time of Leapfrog Evolution with $k = 0.5h$}
  \label{leapfrog_wave_l2_halfk}
 \end{figure}
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/leapfrog_wave_l2_2k.jpg}
  \caption{Change in L2-norm over time of Leapfrog Evolution with $k = 2h$}
  \label{leapfrog_wave_l2_2k}
 \end{figure}
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/leapfrog_wave.jpg}
  \caption{Wave Equation and Approximations after 9 seconds}
@@ -265,10 +265,10 @@ Figure \ref{leapfrog_wave} shows how this approximation suffers from the same pr
 %-------------------------------------------------------------------------------
 By varying the spacial spacing size by setting $N=2^i$ where $i=6,\dots,12$ and fixing $k=0.001$ we can deterimine the relationship between the spacing and the L2-norm of the error, looking at this relationship at $t=5$ we get Figure \ref{leapfrog_wave_Nh}. As seen here, the logarithmic scaling of both axis produces a line graph with a slope of $-2$. This is due to the fact that the error of the leapfrog is proportional to $h^2$, which, when logarithmicly scaled, goes as $2log(h)$, to produce the straight line.
 %-------------------------------------------------------------------------------
-\begin{figure}[H] 
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.5]{Images/leapfrog_wave_Nh.jpg}
  \caption{Change in the L2-norm of the error as the spacing varies}
  \label{leapfrog_wave_Nh}
 \end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
