--- a/Report/6FCM.tex
+++ b/Report/6FCM.tex
@@ -20,7 +20,14 @@ Where $F(x,t)$ describes the flux through a point. This describes the fact that 
 Also referred to as Reconstruct-Evolve-Average (R-E-A) algorithms, these work by assuming the function is made up of a set of piecewise constant values. The system is evolved by fist fitting the average value to a cell and assuming the value is constant across the cell (Reconstruction). The piecewise function is then evolved over one time step, with values of the cell being carried into one another. The new values are then averaged by the ``amount'' of the function which has left the cell and the amount which has entered. These methods can be improved by replacing the piecewise constant with sloping equations or with polynomials to allow for better accuracy with the function being smoother at the cell boundaries.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Advection by Flux Conservative Schemes}
-Implementing the advection equation using a FCM we can see that the optimal flux boundaries can be given by the midpoint between two discrete points. Setting these boundaries as the boundaries of a cell, we can set the flux as the average value of the cell. For some $x_i$ this is then given as $c_i=[x_{i-1/2},x_{i+1/2}]$ with $x_{i+1/2} = x_i + h/2$. We also see that the flux at a given point is proportional to the
+Implementing the advection equation using a FCM we can see that the optimal flux boundaries can be given by the midpoint between two discrete points. Setting these boundaries as the boundaries of a cell, we can set the flux as the average value of the cell. For some $x_j$ this is then given as $v_j=[x_{j-1/2},x_{j+1/2}]$ with $x_{j+1/2} = x_j + h/2$. We also see that the flux at a given point is proportional to the value of the function in that cell at that point in time, $v_j^n$, and the speed at which the flux propagates, $c$. Therefore the flux at the cell $v_j$ at time $t^n$ can be written as
+\begin{equation}\label{eq:adv_flux}
+  F^n_{j+1/2} =cv^n_j
+\end{equation}
+The adjustment of $1/2$ is due to the fact that the center of a flux cell lies in between two points.
+\\
+\\
+The value of the cell can be seen as the average value of the function between its boundaries, $v^n_j=\frac{1}{h}\int_{x_{j-1/2}}^{x_j+1/2}u(x,t^n)dx$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Lax-Fredrich as a Flux Conservative Scheme}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
