--- a/Report/5TE.tex
+++ b/Report/5TE.tex
@@ -5,8 +5,8 @@ In this chapter we will be looking a the conservative form of an equation. An eq
 \end{equation}
 The advection and diffusion equations can therefore be written in conservative form, as well as Burger's equation.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Lax-Fredrichs}
-The Lax-Fredrichs (LF) time evolutions scheme for conservative equation is given by:
+\section{Lax-Friedrichs}
+The Lax-Friedrichs (LF) time evolutions scheme for conservative equation is given by:
 \begin{equation*}
   v^{n+1}_j \simeq \frac{1}{2}(v^n_{j+1} + v^n_{j-1}) - \frac{k}{2h}(F^n_{j+1}-F^n_{j-1}) + O(k,h^2)
 \end{equation*}
