Changed aligned to align

--- a/Report/6FCM.tex
+++ b/Report/6FCM.tex
@@ -32,13 +32,11 @@ The value of the cell can be seen as the average value of the function between i
   F^n_{j-1/2} = \int_{t^{n+1}}^{t^n}f(x_{i-1/2},t)dt
 \end{equation*}
 Now we have
-\begin{equation}\label{eq:flux_upwind}
-\begin{aligned}
+\begin{align}
   hv^{n+1}_j - hv^n_j   &=  kF^n_{j-1/2} - kF^n_{j+1/2}\\
   v^{n+1}_j - v^n_j     &= \frac{k}{h}(cv^n_{j-1} - cv^n_j)\\
-  v^{n+1}_j             &= v^n_j - \frac{ck}{h}(v^n_{j} - v^n_{j-1})
-\end{aligned}
-\end{equation}
+  v^{n+1}_j             &= v^n_j - \frac{ck}{h}(v^n_{j} - v^n_{j-1}) \label{eq:flux_upwind}
+\end{align}
 which is the Upwind Euler method. It should be noted that the FCM relies on the value from one cell being projected to its neighbours, therefore $ck\leq h$, meaning that the Courant stability condition must hold as a restriction for these methods.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Lax-Friedrich as a Flux Conservative Scheme}
@@ -47,16 +45,14 @@ By observing Equation \ref{eq:flux_upwind}, we can see that the general form of 
   v^{n+1}_j = v^n_j - \frac{k}{h}(F^n_{j-1/2} - F^n_{j+1/2})
 \end{equation}
 We now seek to find a flux function, $F^n_{j-1/2}$, such that the Lax-Friedrich method can be recast to a flux conservative form. Starting with the Lax-Friedrich form for $u_t + f(u)_x = 0$
-\begin{equation*}
-\begin{aligned}
+\begin{align*}
   v^{n+1}_j &= \frac{1}{2}(v^n_{j+1} + v^n_{j-1}) - \frac{k}{2h}(f(v^n_{j+1})-f(v^n_{j-1})) \\
   v^{n+1}_j &= v^n_j + \frac{1}{2}(v^n_{j+1} - 2v^n_j + v^n_{j-1}) - \frac{k}{2h}(f(v^n_{j+1}) +f(v^n_j) -f(v^n_j) -f(v^n_{j-1})) \\
   v^{n+1}_j &= v^n_j + \frac{1}{2}(v^n_{j+1} - v^n_j + v^n_{j-1} - v^n_j) - \frac{k}{2h}(f(v^n_{j+1})) +f(v^n_j) -f(v^n_j) -f(v^n_{j-1})) \\
   v^{n+1}_j &= v^n_j - \frac{k}{h}(\frac{1}{2}(f(v^n_{j+1}) +f(v^n_j) -f(v^n_j) -f(v^n_{j-1})) - \frac{h}{2k}(v^n_{j+1} - v^n_j + v^n_{j-1} - v^n_j)) \\
   v^{n+1}_j &= v^n_j - \frac{k}{h}\Bigg(\frac{1}{2}\big(f(v^n_{j+1}) +f(v^n_j)\big) - \frac{1}{2}\big(f(v^n_j) +f(v^n_{j-1})\big) - \frac{h}{2k}\big(v^n_{j+1} - v^n_j\big) +  \frac{h}{2k}\big(v^n_j - v^n_{j-1}\big)\Bigg) \\
   v^{n+1}_j &= v^n_j - \frac{k}{h}\Bigg(\bigg(\frac{1}{2}\big(f(v^n_{j+1}) +f(v^n_j)\big)- \frac{h}{2k}\big(v^n_{j+1} - v^n_j\big)\bigg) - \bigg(\frac{1}{2}\big(f(v^n_j) +f(v^n_{j-1})\big)  -  \frac{h}{2k}\big(v^n_j - v^n_{j-1}\big) \bigg) \Bigg) \\
-\end{aligned}
-\end{equation*}
+\end{align*}
 Now we can see that our flux function is
 \begin{equation}
   F^n_{j-1/2} = \frac{1}{2}\big(f(v^n_j) +f(v^n_{j-1})\big)  -  \frac{h}{2k}\big(v^n_j - v^n_{j-1}\big)
