--- a/Report/3TI.tex
+++ b/Report/3TI.tex
@@ -118,25 +118,21 @@ The advection equation can be approximated with the function $v$ where
 v_i^j = u(x_i,t_j)
 \end{equation}
 by using the standard FDM we get the partial derivatives
-\begin{equation}\label{advfdm}
-\begin{aligned}
-    \partial_xv_i^j &= \frac{v_{i+1}^j - v_{i-1}^j}{2h} + O(h^2) \\
-    \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^{j-1}}{2k} + O(k^2)
-\end{aligned}
-\end{equation}
+\begin{align}
+    \partial_xv_i^j &= \frac{v_{i+1}^j - v_{i-1}^j}{2h} + O(h^2)\label{advfdmx} \\
+    \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^{j-1}}{2k} + O(k^2)\label{advfdmt}
+\end{align}
 %-----------------------------------------------------------------
 \subsubsection{Leapfrog}
-Substituting Equation \ref{advfdm} into the advection equation we get
+Substituting Equation \ref{advfdmx} and \ref{advfdmt} into the advection equation we get
 \begin{equation}
   \partial_tv_i^j + c\partial_xv_i^j = 0
 \end{equation}
 however, $v_i^{j+1}$ is unknown. So we rearrange the equation to solve for $v_i^{j+1}$ to get
-\begin{equation}
-\begin{aligned}
+\begin{align*}
     v_i^{j+1} &= v_i^{j-1} - 2ck\partial_xv_i^j \\
 	      &= v_i^{j-1} - c\frac{k}{h}(v_{i+1}^j - v_{i-1}^j) + O(h^2k^2)
-\end{aligned}
-\end{equation}
+\end{align*}
 This is known as the ``Leapfrog'' method as it requires $v_i^{j-1}$ in order to calculate $v_i^{j+1}$ This can be somewhat problematic with the initial data as $v_i^0=u_0$ and $v_i^2$ onwards can be calculated this way but $v_i^1$ cannot be found by this method. Another problem concerining this method is the decoupling of odd and even points as all even points rely soley on the odd points of the previous time step and alternately for the odd points.
 %-----------------------------------------------------------------
 \subsubsection{Centered Euler}
@@ -145,39 +141,31 @@ The Centred Euler method seeks to circumvent this problem by setting
 \partial_tv_i^j = \frac{v_i^{j+1} - v_i^j}{k} + O(k)
 \end{equation}
 substituting this into the advection equation and rearranging to solve for $v_i^{j+1}$ gives
-\begin{equation}
-\begin{aligned}
+\begin{align*}
     v_i^{j+1} &= v_i^j - ck\partial_xv_i^j \\
 	      &= v_i^j - c\frac{k}{2h}(v_{i+1}^j - v_{i-1}^j) + O(kh^2)
-\end{aligned}
-\end{equation}
+\end{align*}
 This method uses a one-sided time step to calculate the next step. This makes it unconditionally unstable and over time it varies wildly from the actual data. Due to the error being relatively low for the first step, it is generally used to initialise the Leapfrog method.
 %-----------------------------------------------------------------
 \subsubsection{Upwind Euler}
 By setting
-\begin{equation}
-\begin{aligned}
+\begin{align*}
     \partial_xv_i^j &= \frac{v_{i+1}^j - v_i^j}{h} + O(h) \\
     \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^j}{k} + O(k)
-\end{aligned}
-\end{equation}
+\end{align*}
 we get
-\begin{equation}
-\begin{aligned}
+\begin{align*}
     v_i^{j+1} &= v_i^j - ck\partial_xv_i^j \\
 	      &= v_i^j - c\frac{k}{h}(v_{i+1}^j - v_i^j) + O(kh)
-\end{aligned}
-\end{equation}
+\end{align*}
 This is arguably the best method to calculate the advection equation as it uses a biased stencil to propel the data from $u_0$ along the $t$ and $x$ axis, much like the advection equation itself.
 %-----------------------------------------------------------------
 \subsection{Wave Equation}
 Using the second order, second derivative FDM on $u$ with $v_i^j = u(x_i,t_j)$ we get
-\begin{equation}
-\begin{aligned}
+\begin{align*}
     \partial_{xx}v_i^j &= \frac{v_{i+1}^j - 2v_i^j + v_{i-1}^j}{h^2} + O(h^2) \\
     \partial_{tt}v_i^j &= \frac{v_i^{j+1} - 2v_i^j + v_i^{j-1}}{k^2} + O(k^2)
-\end{aligned}
-\end{equation}
+\end{align*}
 Substituting this into the wave equation we get
 \begin{equation}
   \partial_{tt}v_i^j - c^2\partial_{xx}v_i^j = 0
